syntax = "proto3";

package services;
option go_package = "server/generated/services";

import "messages.proto";


service Service {
    rpc SignIn (messages.SignInRequest)   returns (messages.SignInResponse) {}
    rpc User   (messages.UserRequest)     returns (messages.UserResponse) {}
    rpc Message(stream messages.MessageRequest)  returns (messages.MessageResponse) {}
    rpc Receive(messages.ReceivedRequest) returns (stream messages.ReceivedResponse) {}
}
